--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -12,8 +12,6 @@
 </head>
 
 
-
-
 <body>
 
     <header class="titulo">
@@ -25,7 +23,7 @@
                     <a href="/perfil">Perfil de Usuario</a>
                     {% else %}   
                     <a href="/Login">Iniciar sesión</a>
-                    <a href="registro">Registro</a> 
+                    <a href="/registro">Registro</a> 
                     {% endif %}
 
                 </nav>
