Cambios en templates
Se añaden descripciones de los servicios en los templates y se agregan los servicios de la peluqueria a la base de datos (precio, duracion, etc..)

--- a/peluqueria/templates/index_prueba.html
+++ b/peluqueria/templates/index_prueba.html
@@ -40,7 +40,7 @@
                                 </div>         
                             </div>
                             <div class="servicios ">
-                                <h3>Lavados</h3> 
+                                <h3>Lavados y cortes</h3> 
                                 <img src="{% static 'imagenes/Lavado.jpg' %}"  alt="My image">
                                 <div class="contenido-servicio">
                                     <a href="/Lavados" class="boton boton-gris">Ver más</a>    
