--- a/peluqueria/templates/pagina_cortes.html
+++ b/peluqueria/templates/pagina_cortes.html
@@ -13,8 +13,8 @@
                             <h3>Cortes de cabello niño</h3>
                             <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image">
                                 <div class="infor_servicio">
-                                    <li>Duración: </li>
-                                    <li>Precio: </li>
+                                    <li>Duración: 30 Minutos</li>
+                                    <li>Precio: $7.000</li>
                                 </div>
                                 <div class="contenido-servicio">
                                     <a href="/selectPeluquero/1" class="boton boton-gris">Realizar reserva</a>
@@ -23,6 +23,10 @@
                         <div class="servicios">
                             <h3>Cortes de cabello niña</h3>
                             <img src="{% static 'imagenes/imagen_prueba.jpg' %}" alt="My image">
+                            <div class="infor_servicio">
+                                <li>Duración: 30 Minutos</li>
+                                <li>Precio: $7.000</li>
+                            </div>
                             <div class="contenido-servicio">
                                 <a href="/selectPeluquero/2" class="boton boton-gris">Realizar reserva</a>
                             </div>
@@ -30,6 +34,10 @@
                         <div class="servicios">
                             <h3>Cortes de cabello Varon</h3>
                             <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image">
+                            <div class="infor_servicio">
+                                <li>Duración: 30 Minutos</li>
+                                <li>Precio: $9.000</li>
+                            </div>
                             <div class="contenido-servicio">
                                 <a href="/selectPeluquero/3" class="boton boton-gris">Realizar reserva</a>
                             </div>
@@ -39,6 +47,10 @@
                         <div class="servicios">
                             <h3>Cortes de cabello Dama</h3> 
                             <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image"> 
+                            <div class="infor_servicio">
+                                <li>Duración: 30 Minutos</li>
+                                <li>Precio: $9.000</li>
+                            </div>
                             <div class="contenido-servicio">
                                 <a href="/selectPeluquero/4" class="boton boton-gris">Realizar reserva</a>   
                             </div>         
