Poblacion base de datos
Se pobla la base de datos con las horas de los peluqueros que realizan los servicios de la peluqueria, con el fin de poder realizar la reserva de horas

--- a/digitalizacion/static/css/estilos_index.css
+++ b/digitalizacion/static/css/estilos_index.css
@@ -295,6 +295,11 @@ padding-bottom: 25rem;
     color:white;
 }
 
+.color_letra a{
+    text-decoration: none;
+    color: rgb(95, 90, 90)
+}
+
 .infor_servicio{
     color:rgb(175, 175, 175);
     text-align: center;
