--- a/peluqueria/templates/seleccionar_peluquero.html
+++ b/peluqueria/templates/seleccionar_peluquero.html
@@ -20,7 +20,11 @@
                                                     <h3>{{nombres.first_name}} {{nombres.last_name }}</h3>
                                                     <img src="{% static 'imagenes/peluquero.jpg' %}" alt="My image">
                                                     <div class="contenido-servicio">
-                                                        <a href="/seleccionar_fecha/{{peluquero.rut_usuario_p_id}}" class="boton">Seleccionar</a>   
+                                                        {% if request.user.is_authenticated %}
+                                                            <a href="/seleccionar_fecha/{{peluquero.rut_usuario_p_id}}" class="boton">Seleccionar</a>
+                                                        {% else %}
+                                                            <a  href="/Login" class="boton">Debes iniciar sesión</a> 
+                                                        {% endif %}
                                                     </div>
                                                 </div>
                                             {% endif %}
