interaccion base de datos
Se realiza un pequeño script para realizar un llenado automatico de la base de datos para las horas de los peluqueros y las fechas

--- a/peluqueria/templates/layout.html
+++ b/peluqueria/templates/layout.html
@@ -47,6 +47,8 @@
                         <nav class="navegador_informacion">
                             <a href="/prueba">Añadir Peluquero</a>
                             <a href="/Contacto">Calendario</a>
+                            <a href="/poblar">Poblar horas</a>
+                            <a href="/fechas">Ver Fecha</a>
                         </nav> 
                     {% endif %} 
                 {% else %}
