--- a/peluqueria/templates/layout.html
+++ b/peluqueria/templates/layout.html
@@ -48,7 +48,7 @@
                             <a href="/prueba">Añadir Peluquero</a>
                             <a href="/Contacto">Calendario</a>
                             <a href="/poblar">Poblar horas</a>
-                            <a href="/fechas">Ver Fecha</a>
+                            <a href="/fechas">Agregar Fecha</a>
                         </nav> 
                     {% endif %} 
                 {% else %}
