--- a/peluqueria/templates/seleccionar_fecha.html
+++ b/peluqueria/templates/seleccionar_fecha.html
@@ -25,20 +25,31 @@
 
 
     selectable: true,
-    dateClick: function(info) {
-      alert('clicked ' + info.dateStr);
-    },
+    
 
-        events: [
-        {% for fechas in fechas_peluqueria %}
-          {
-              title: " Haz click en la casilla ",
-              start: '{{ fechas.fecha | date:"Y-m-d"}}',
-              end: '{{ fechas.fecha | date:"Y-m-d"}}',
-          },
-        {% endfor %}
-    ]
-  
+    events: [
+    {% for fechas in fechas_peluqueria %}
+      {
+          title: " Haz click en la casilla ",
+          start: '{{ fechas.fecha | date:"Y-m-d"}}',
+          end: '{{ fechas.fecha | date:"Y-m-d"}}',
+      },
+    {% endfor %}
+    ],
+
+    
+    
+        
+    dateClick: function(info) {
+      {% for fechas in fechas_peluqueria %}
+        if (info.dateStr == '{{ fechas.fecha | date:"Y-m-d"}}')
+          
+            location.href="/selectHora/{{cod}}/{{fechas.id_fecha}} "
+              
+      {% endfor %}
+    },
+         
+    
 
   });
 
