--- a/peluqueria/templates/confirmar_hora.html
+++ b/peluqueria/templates/confirmar_hora.html
@@ -14,7 +14,7 @@
                         <div class="servicios color_letra">
                             <h1>{{hora_peluqueria.hora_inicio}} </h1>
                             <div class="contenido-servicio">
-                                <a href="/hora_confirmada/{{ cod }}/{{ cod2 }}">SI</a>
+                                <a href="/hora_confirmada/{{cod}}/{{cod2}}/{{cod3}}">SI</a>
                                 <a href="/">NO</a>
                             </div>
                         </div>
