--- a/peluqueria/templates/layout.html
+++ b/peluqueria/templates/layout.html
@@ -73,7 +73,7 @@
                                 <a href="/prueba">Quiénes somos</a>
                                 <a href="/Contacto">Contacto</a>
                                 <a href="/prueba">Dirección</a>
-                                <a href="/Profesionales">Reservas</a>
+                                <a href="/reservas">Reservas</a>
                                 <a href="/Profesionales">Profesionales</a>
                             </nav>       
                         {% endif %}  
